<resources>
    <string name="app_name">WootecoOnDeviceAi</string>

    <string name="button_camera">카메라 실행</string>
    <string name="button_gallery">갤러리에서 선택</string>
    <string name="textview_result_placeholder">[분석 결과가 여기에 표시됩니다]</string>

    <string name="toast_permission_denied">카메라 권한이 필요합니다.</string>

    <string name="text_analyzing">분석 중...</string>
    <string name="text_analysis_failed">분석에 실패했습니다.</string>

    <string name="label_segmentation_chips">제거할 대상을 선택:</string>
    <string name="text_removal_complete">\'%1$s\' 제거 완료</string>

    <string name="button_inpaint">자연스럽게 채우기</string>
    <string name="text_inpaint_complete">픽셀 채우기 완료</string>
</resources>